# openfairdb

./: Cargo.toml
src/: entities.rs  error.rs  json.rs  main.rs  store.rs
src/adapters/: json.rs
src/business/: date_restriction.rs  duplicates.rs  mod.rs  usecase.rs
