[package]
name = "openfairdb"
version = "0.0.16"
authors = ["Markus Kohlhase <mail@markus-kohlhase.de>"]

[dependencies]
nickel = "0.8"
r2d2 = "0.6"
rustc-serialize = "0.3"
hyper = "0.8"
unicase = "1.4"
clap = "2.4"
log = "0.3"
env_logger = "0.3"
typemap = "0.3"
uuid = "0.1"
geojson = "0.2"
time = "0.1"
rusted_cypher = { version = "0.9",  features = ["rustc-serialize"] }
clippy = { version = "*", optional = true }
nickel_cookies = "0.1"
nickel_session = "0.1"

[dependencies.r2d2_cypher]
version = "0.1.0"
git = "git://github.com/flosse/r2d2-cypher.git"

[features]
default=[]
